<color=green><b>MAKE SURE IT'S THE CORRECT DATE!</b></color>
- Changes to Steel Table Lamp, Steel Floor Lamp and Steel Ceiling Light recipes

<color=green><b>2018-04-03</b></color>
- Removed Super Secret Dildo Statue (April Fools)
- Hid Ecko Statue (Temp fix)
- Added weight to world objects
- Halved the weight of coal and ores
- Added /houseranking
- Added /report
- Added Super Skills

<color=green><b>2018-04-01</b></color>
- Removed Tailings from Steel recipe
- Removed Toxic Waste Barrel
- Removed Glue from Shelf Cabinet
- Removed Glue from Bookshelf
- Reduced amounts of books in Shelf Cabinet and Bookshelf
- Reduced Nails needed in Shelf Cabinet and Bookshelf
- Organized mod folder
- Added Super Secret Dildo Statue
- Added Changelog
- Added Rules

<color=green><b>2018-03-31</b></color>
- Removed iron ingot from Road Tool
- Removed iron ingot from Door and reduced hinge and nails
- Removed Rope from stockpile and increased logs needed
- Increased storage space in Cardboard Boxes