@@ -1,0 +1,38 @@
+namespace Eco.Mods.TechTree
+{
+    using System;
+    using System.Collections.Generic;
+    using System.Linq;
+    using Eco.Core.Utils;
+    using Eco.Core.Utils.AtomicAction;
+    using Eco.Gameplay.Components;
+    using Eco.Gameplay.DynamicValues;
+    using Eco.Gameplay.Items;
+    using Eco.Gameplay.Players;
+    using Eco.Gameplay.Property;
+    using Eco.Gameplay.Skills;
+    using Eco.Gameplay.Systems.TextLinks;
+    using Eco.Shared.Localization;
+    using Eco.Shared.Serialization;
+    using Eco.Shared.Services;
+    using Eco.Shared.Utils;
+    using Gameplay.Systems.Tooltip;
+
+    [Serialized]
+    [RequiresSkill(typeof(MetalConstructionSkill), 1)]    
+    public partial class SteelConstructionSkill : Skill
+    {
+        public override string FriendlyName { get { return "Steel Construction"; } }
+        public override string Description { get { return Localizer.Do(""); } }
+
+        public static ModificationStrategy MultiplicativeStrategy = 
+            new MultiplicativeStrategy(new float[] { 1, 1 - 0.2f, 1 - 0.35f, 1 - 0.5f, 1 - 0.65f, 1 - 0.8f });
+        public static ModificationStrategy AdditiveStrategy =
+            new AdditiveStrategy(new float[] { 0, 0.2f, 0.35f, 0.5f, 0.65f, 0.8f });
+        public static int[] SkillPointCost = { 1, 2, 2, 3, 3 };
+        public override int RequiredPoint { get { return this.Level < this.MaxLevel ? SkillPointCost[this.Level] : 0; } }
+        public override int PrevRequiredPoint { get { return this.Level - 1 >= 0 && this.Level - 1 < this.MaxLevel ? SkillPointCost[this.Level - 1] : 0; } }
+        public override int MaxLevel { get { return 4; } }
+    }
+
+}
