@@ -1,5 +1,6 @@
 <color=green><b>MAKE SURE IT'S THE CORRECT DATE!</b></color>
 - Changes to Steel Table Lamp, Steel Floor Lamp and Steel Ceiling Light recipes
+- Reduced construction skill costs
 
 <color=green><b>2018-04-03</b></color>
 - Removed Super Secret Dildo Statue (April Fools)
